fix padding body on mobile version

--- a/docs/src/css/app.css
+++ b/docs/src/css/app.css
@@ -58,7 +58,7 @@ pre[class*="language-"] {
 
   .markdown-body {
     padding: 5px 3%;
-    max-width: 98%;
+    max-width: 97%;
   }
 }
 
